--- a/website/pages/templates/pages/quote.html
+++ b/website/pages/templates/pages/quote.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 	<div class="container">
-		<div class="content_big">
+		<div class="content_bigger">
 		
 			<div class="side_title_backing_big" style="width:100%">
 				<h1 class="page_title">QUOTE!</h1>
