--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -8,7 +8,7 @@
 			<div class="slideshow mobile_hide_600">
 				<img class="slide1" src="{% static 'pages/images/panda.jpg' %}" style="width:100%">
 				<img class="slide1" src="{% static 'pages/images/curry_night.jpg' %}" style="width:100%">
-				<img class="slide1" src="{% static 'pages/images/fun.jpg' %}" style="width:100%">
+				<img class="slide1" src="{% static 'pages/images/wus_event.jpg' %}" style="width:100%">
 			</div>
 			
 				<!--<div>
@@ -37,7 +37,7 @@
 			<div class="slideshow mobile_show_600">
 				<img class="slide2" src="{% static 'pages/images/panda.jpg' %}" style="width:100%">
 				<img class="slide2" src="{% static 'pages/images/curry_night.jpg' %}" style="width:100%">
-				<img class="slide2" src="{% static 'pages/images/fun.jpg' %}" style="width:100%">
+				<img class="slide2" src="{% static 'pages/images/wus_event.jpg' %}" style="width:100%">
 			</div>
 			
 			<!--<div class="mobile_hide_600">-->
