Some things changed

--- a/website/pages/templates/pages/committee.html
+++ b/website/pages/templates/pages/committee.html
@@ -10,7 +10,7 @@
 				<h1 class="page_title">COMMITTEE</h1>
 			</div>
 			
-			<p>Yes, RockSoc has a committee. At some point they'll be put here...</p>
+			<p>The website is currently under refurbishment :)</p>
 			
 		</div>
 	</div>
