--- a/website/pages/templates/pages/wus.html
+++ b/website/pages/templates/pages/wus.html
@@ -13,9 +13,7 @@
 			<h3>What is WUS?</h3>
 			
 			<p>Wake Up Screaming, or WUS, is Cambridge RockSoc's own club night, which runs every third Friday of the month at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>,
-			both in and out of term. It's a great chance to meet up with members of RockSoc and the wider rock and metal community in Cambridge.
-			<br>
-			Entry is £3 for <a href="/about" class="paragraph_link">members</a> and £4 for non-members.<p>
+			both in and out of term. It's a great chance to meet up with members of RockSoc and the wider rock and metal community in Cambridge. Entry is £3 for <a href="/about" class="paragraph_link">members</a> and £4 for non-members.<p>
 
 			<h3>DJing at WUS</h3>
 
