--- a/website/pages/templates/pages/constitution.html
+++ b/website/pages/templates/pages/constitution.html
@@ -10,7 +10,7 @@
 				<h1 class="page_title">CONSTITUTION</h1>
 			</div>
 			
-			<p>Below you can find the RockSoc constituion in all its glory. Here lies the final word on any RockSoc constitution-related disputes.</p>
+			<p>Below you can find the RockSoc constituion in all its glory. Here lies the final word on any RockSoc-constitution-related disputes.</p>
 			
 			<h3>Constitution :</h3>
 			
