--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -69,7 +69,7 @@
 					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">OTHER EVENTS</a></p>
 				</div>
 				
-				<p>Here are listings of all rock, metal, and alternative events we know about in Cambridge. If you are organising such an event then contact the webmaster to have it added.</p>
+				<p>Here are listings of all rock, metal, and alternative events we know about in Cambridge. If you are organising such an event then <a href="/contact" class="paragraph_link">contact</a> the webmaster to have it added.</p>
 			<!--</div>-->
 			
 			<!--<img src="{% static 'pages/images/.png' %}" style="width:100%">-->
@@ -165,7 +165,7 @@
 				<!--<p class="sidebar_text">{{ news.info | truncatechars:300 }}</p>-->
 				
 				<table>
-					<td style="width:100%"><p class="sidebar_text">{{ news.info | truncatechars:300 }}</p></td>
+					<td style="width:100%"><p class="sidebar_text">{{ news.info | truncatechars:200 }}</p></td>
 					<td style="vertical-align:bottom"><p><a href="/news" style="text-decoration:none">>></a></p></td>
 				</table>
 			
