--- a/website/pages/templates/pages/news.html
+++ b/website/pages/templates/pages/news.html
@@ -56,7 +56,7 @@
 						</table>
 						
 						<div class="crop_events_mobile">
-							<img src="{{ news.image.url }}" style="width:100%">
+							<img src="{{ news.image.url }}" style="width:100%; vertical-align:top">
 						</div>	
 				
 						<p>{{ news.info | urlize | linebreaks }}</p>
