--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -48,8 +48,8 @@
 					<p class="sub_heading_welcome"><a href="/wus" class="paragraph_link">WAKE UP SCREAMING</a></p>
 				</div>
 				
-				<p>This is our club night at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>, taking place every third Friday of the month. If you are 
-				interested in DJing, contact the WUS officer. No experience is necessary for the first slot!</p>
+				<p>This is our club night at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>, taking place every third Friday of the month. 
+				If you are interested in DJing, contact the WUS officer. No experience is necessary for the first slot!</p>
 
 				<!--<p><a href="/events">Pub meets</a></p>-->
 				
@@ -59,14 +59,16 @@
 				
 				<p>We meet weekly on a Thursday at a random pub in Cambridge, hailed as “RockSoc on tour”. To find out where our next pub meet is, keep an eye on the events page.</p>
 				
-				<div class="side_title_backing" style="width:45%">
-					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">GIGS</a></p>
-				</div>
+				<!--hailed as “RockSoc on tour”-->
 				
-				<p>Gigs are organised at least once a term. If you are a band looking for a slot then contact the events officer.</p>
+				<!--<div class="side_title_backing" style="width:45%">
+					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">GIGS</a></p>
+				</div>-->
+				
+				<!--<p>Gigs are organised at least once a term. If you are a band looking for a slot then contact the events officer.</p>-->
 
 				<div class="side_title_backing_wus_small" style="width:45%">
-					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">OTHER EVENTS</a></p>
+					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">GIGS AND OTHER EVENTS</a></p>
 				</div>
 				
 				<p>Here are listings of all rock, metal, and alternative events we know about in Cambridge. If you are organising such an event then <a href="/contact" class="paragraph_link">contact</a> the webmaster to have it added.</p>
@@ -154,11 +156,11 @@
 							<br><br>
 							<h4 class="break_all"><a href="/news" id="event_name_list">{{ news.news_title }}</a></h4>
 						</td>
-						<td style="vertical-align:top">
+						<!--<td style="vertical-align:top">
 							<div class="crop_small">
 								<a href="/news"><img src="{{ news.image.url }}" style="width:100%" id="event_img"></a>
 							</div>
-						</td>
+						</td>-->
 					</tr>
 				</table>
 				
