changed some colours

--- a/website/pages/templates/pages/events.html
+++ b/website/pages/templates/pages/events.html
@@ -17,7 +17,8 @@
 					<h1 class="page_title">EVENTS</h1>
 				</div>
 				
-				<p>Below are listings of all alternative events we know about in Cambridge. If you know of an event not on this list, or are organising one, then contact the webmaster to have it added.</p>
+				<p>Below are listings of all alternative events we know about in Cambridge. If you know of an event not on this list, or are organising one, then 
+				<a href="/contact" class="paragraph_link">contact</a> the webmaster to have it added.</p>
 				<p>Scroll down to see more events. </p> <!--Official RockSoc events are labeled.</p>-->
 			
 				<!--<p class="sidebar_text" align="center"><img src="{% static 'pages/images/arrow_up.png' %}" style="width:20px" id="scroll_up"></p>-->
