Minor changes to news

--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -149,20 +149,20 @@
 			{% for news in news %}
 						
 				<!--<hr>-->
-				<table id="event_list">
+				<!--<table id="event_list">
 					<tr>
-						<td style="width:50%;vertical-align:top">
+						<td style="width:50%;vertical-align:top">-->
 							<h5>{{ news.date | date:"d/m/y" }}</h5>
 							<br><br>
 							<h4 class="break_all"><a href="/news" id="event_name_list">{{ news.news_title }}</a></h4>
-						</td>
+						<!--</td>-->
 						<!--<td style="vertical-align:top">
 							<div class="crop_small">
 								<a href="/news"><img src="{{ news.image.url }}" style="width:100%" id="event_img"></a>
 							</div>
 						</td>-->
-					</tr>
-				</table>
+					<!--</tr>
+				</table>-->
 				
 				<!--<p class="sidebar_text">{{ news.info | truncatechars:300 }}</p>-->
 				
