some text changed

--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -45,7 +45,7 @@
 			
 			<!--<div class="mobile_hide_600">-->
 				<div class="side_title_backing_wus_small" style="width:45%">
-					<p class="sub_heading_welcome"><a href="/wus" class="paragraph_link">WAKE UP SCREAMING</a></p>
+					<p class="sub_heading_welcome"><a href="/wus" class="paragraph_link">Wake Up Screaming</a></p>
 				</div>
 				
 				<p>This is our club night at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>, taking place every third Friday of the month. 
@@ -54,7 +54,7 @@
 				<!--<p><a href="/events">Pub meets</a></p>-->
 				
 				<div class="side_title_backing" style="width:45%">
-					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">PUB MEETS</a></p>
+					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">Pub Meets</a></p>
 				</div>
 				
 				<p>We meet weekly on a Thursday at a random pub in Cambridge, hailed as “RockSoc on tour”. To find out where our next pub meet is, keep an eye on the events page.</p>
@@ -68,7 +68,7 @@
 				<!--<p>Gigs are organised at least once a term. If you are a band looking for a slot then contact the events officer.</p>-->
 
 				<div class="side_title_backing_wus_small" style="width:45%">
-					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">GIGS AND OTHER EVENTS</a></p>
+					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">Gigs and Other Events</a></p>
 				</div>
 				
 				<p>Here are listings of all rock, metal, and alternative events we know about in Cambridge. If you are organising such an event then <a href="/contact" class="paragraph_link">contact</a> the webmaster to have it added.</p>
