some layout changes

--- a/website/pages/templates/pages/base.html
+++ b/website/pages/templates/pages/base.html
@@ -65,7 +65,7 @@
 		$(document).ready(function () {
 			$('#scroll_down').click(function () {
 				$('.event_window').animate({
-					scrollTop: '+=310'
+					scrollTop: '+=200%'
 				}, 500);
 			});
 		});
@@ -75,7 +75,7 @@
 		$(document).ready(function () {
 			$('#scroll_up').click(function () {
 				$('.event_window').animate({
-					scrollTop: '-=310'
+					scrollTop: '-=200%'
 				}, 500);
 			});
 		});
@@ -85,7 +85,7 @@
 		$(document).ready(function () {
 			$('#scroll_down_small').click(function () {
 				$('.event_window_small').animate({
-					scrollTop: '+=310'
+					scrollTop: '+=200%'
 				}, 500);
 			});
 		});
@@ -95,7 +95,7 @@
 		$(document).ready(function () {
 			$('#scroll_up_small').click(function () {
 				$('.event_window_small').animate({
-					scrollTop: '-=310'
+					scrollTop: '-=200%'
 				}, 500);
 			});
 		});
