--- a/website/pages/static/pages/pages.css
+++ b/website/pages/static/pages/pages.css
@@ -815,7 +815,7 @@ table#event_list:hover {
 
 .crop_events_mobile {
 	width: 100%;
-	max-height: 250px;
+	max-height: 200px;
 	overflow: hidden;
 }
 
@@ -910,20 +910,22 @@ table#event_list:hover {
 }*/
 
 .event_window_small {
-	/*width: 100%;*/
-	height: 450px;
-	overflow: auto;
-	visibility: hidden;
-}
-
+		/*width: 100%;*/
+		height: 300px;
+		overflow: auto;
+		visibility: hidden;
+		/*margin-right: -18px;*/
+	}
+	
 .event_window {
 	/*width: 100%;*/
-	height: 550px;
+	height: 400px;
 	overflow: auto;
 	visibility: hidden;
+	/*margin-right: -18px;*/
 }
 
-@media screen and (min-width: 1030px) {
+@media screen and (min-width: 600px) {
 	.event_window_small {
 		/*width: 100%;*/
 		height: 450px;
